@@ -24,6 +24,11 @@ New in spot 2.5.3.dev  (not yet released)
 
   Library:
 
+  - spot::twa_graph::merge_states() is a new method that merges states
+    with the exact same outgoing edges. As it performs no reordering of
+    the edges, it is better to call it when you know that the edges in
+    the twa_graph are sorted (e.g. after a call to merge_edges()).
+
   - You can now specify to Spot the number of acceptance marks you
     wish to use. This is a compile-time option, accessible through
     option --enable-max-accsets of the configure script. The default
